--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,5 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Set up Swift
+      uses: fwal/setup-swift@v1
+      with:
+        swift-version: '5.9.0'
     - name: Build
       run: swift build -v
