--- a/.github/workflows/validate-json.yml
+++ b/.github/workflows/validate-json.yml
@@ -63,25 +63,70 @@ jobs:
           }
           EOL
       
-      - name: Find and validate data.json files
+      - name: Scan for JSON files
+        id: scan
         run: |
-          echo "Validating JSON files..."
-          # Use -print0 and read -d '' to handle filenames with spaces properly
+          echo "Scanning for JSON files..."
+          # Create a temporary file to store the list of JSON files
+          touch json_files.txt
+          
+          # Find all data.json files and group them by language
           find Demo -name "data.json" -print0 | while IFS= read -r -d '' FILE; do
-            echo "Checking $FILE"
+            # Extract the language from the directory path
+            LANG_DIR=$(dirname "$FILE")
+            LANG=$(basename "$LANG_DIR")
+            echo "$LANG:$FILE" >> json_files.txt
+          done
+          
+          echo "Found the following JSON files for validation:"
+          cat json_files.txt
+          
+          echo "Scan completed."
+      
+      - name: Validate JSON syntax per language
+        run: |
+          echo "Validating JSON syntax for each language..."
+          ERROR=0
+          
+          # Process each file by language
+          while IFS=':' read -r LANG_DIR FILE || [ -n "$FILE" ]; do
+            echo "Checking syntax for language: $LANG_DIR - $FILE"
+            
             # Check JSON syntax
             if ! jq empty "$FILE" 2>/dev/null; then
-              echo "❌ Invalid JSON syntax in $FILE"
-              exit 1
+              echo "❌ Invalid JSON syntax in $LANG_DIR ($FILE)"
+              ERROR=1
+            else
+              echo "✅ JSON syntax is valid for $LANG_DIR"
             fi
+          done < json_files.txt
+          
+          if [ $ERROR -ne 0 ]; then
+            echo "JSON syntax validation failed"
+            exit 1
+          fi
+      
+      - name: Validate schema per language
+        run: |
+          echo "Validating JSON schema for each language..."
+          ERROR=0
+          
+          # Process each file by language
+          while IFS=':' read -r LANG_DIR FILE || [ -n "$FILE" ]; do
+            echo "Validating schema for language: $LANG_DIR - $FILE"
             
             # Validate against schema
             if ! npx ajv -s schema.json -d "$FILE" --strict=false; then
-              echo "❌ $FILE does not match the required schema"
-              exit 1
+              echo "❌ $LANG_DIR ($FILE) does not match the required schema"
+              ERROR=1
             else
-              echo "✅ $FILE is valid"
+              echo "✅ Schema is valid for $LANG_DIR"
             fi
-          done
+          done < json_files.txt
+          
+          if [ $ERROR -ne 0 ]; then
+            echo "JSON schema validation failed"
+            exit 1
+          fi
           
           echo "All JSON files are valid! 🎉"
